package at.technikum.parkpalbackend.model.enums;

public enum Gender {
    OTHER,

    FEMALE,

    MALE,
}
