@startuml
'https://plantuml.com/class-diagram

hide empty methods
'hide EventTag

entity User {
    - gender : Gender
    - salutation: String
    - username: String
    - firstName: String
    - lastName: String
    - email: String
    - password: String
    - locked: boolean
    - country: Country
    - role: Role
    - joinedEvents: List<Event>
    - media: List<File>
}

enum Gender {
    OTHER
    FEMALE
    MALE
}

enum UserRole {
    USER
    ADMIN
}

entity Event {
    - title: String
    - description: String
    - startTS: LocalDateTime
    - endTS: LocalDateTime
    - park: Park
    - creator: User
    - joinedUsers: List<User>
    - tags: Set<EventTag>
    - media: List<File>
}

entity EventTag {
    name: string
}

entity File {
    - externalId: String
    - path: String
    - filename: String
    - LocalDateTime: uploadDate
    - user: User
    - event: Event
    - park: Park
    - assigned: boolean
}


entity Park {
    - name: String
    - description: String
    - parkAddress: Address
    - parkEvents: List<Event>
    - media: List<File>
}

class Address <<(V, #FF7700) value-object>> {
    - streetNumber: String
    - zipCode: String
    - city: String
    - country: Country
}

entity Country {
    - name: String
    - iso2Code: String
}

User "n..1" <-left- Event : created by
User -left- "n..m" Event : joined By
Event --> "1..n" Park : has <
Event "n..m" -- EventTag
Event "1..n" --> File : has >
User -- "1..n" File  : has >
Park "1..n" -up-> File : has >
User -> Country
Address -right-> Country
Park -> "0..1" Address
User -right-> Gender
User -down-> UserRole

@enduml
